--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <link href='http://fonts.googleapis.com/css?family=Lato:400,700,700italic,400italic,900,900italic' rel='stylesheet' type='text/css'>
 <link href='http://fonts.googleapis.com/css?family=Numans' rel='stylesheet' type='text/css'>
 <link href='css/css.css' rel='stylesheet' type='text/css'>
+
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <script src="js/js.js"></script>
 <script src="js/fps.requestAnimate.js"></script>
@@ -52,7 +53,7 @@
 <section class="wrap">
 	<div id="holder"><p>Drag your KSP Save Game Here</p></div> 
 	<noscript type="text/html"><p id="no-js-msg">JavaScript is Required</p></noscript>
-	<p id="status">Please use a modern browser such as the newest <a href="https://www.google.com/intl/en-CA/chrome/browser/" target="_blank">Chrome</a> or <a href="https://mozilla.org" target="_blank">Firefox</p> Browsers.</p>
+	<p id="status">Please use a modern browser such as the newest <a href="https://www.google.com/intl/en-CA/chrome/browser/" target="_blank">Chrome</a> or <a href="https://mozilla.org" target="_blank">Firefox</a> Browsers.</p>
 
 </section>
       <footer>
