Forgot target Element

--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
 	<p id="status">Please use a modern browser such as the newest <a href="https://www.google.com/intl/en-CA/chrome/browser/" target="_blank">Chrome</a> or <a href="https://mozilla.org" target="_blank">Firefox</a> Browsers.</p>
 
 </section>
+<section class="table-output"></section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/bigorangemachine">bigorangemachine</a></p>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
