--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
+	
+	<meta property="og:title" content="KSP - Career Science Checklist Generator by bigorangemachine" /> 
+	<meta property="og:type" content="website" /> 
+	<meta property="og:url" content="http://bigorangemachine.github.io/ksp_js_career_sci_list/" />
+	<meta property="og:image" content="http://bigorangemachine.github.io/ksp_js_career_sci_list/img/screen.jpg" />
+	<meta property="og:description" content="Kerbal Space Program - Career Save Game tool.  Reads save file to generate a Kerbal Science Experiments table.  Upload a your file to this utility and get a report of your progress." />
+	<meta name="description" content="Kerbal Space Program - Career Save Game tool.  Reads save file to generate a Kerbal Science Experiments table.  Upload a your file to this utility and get a report of your progress."/>
+	<meta name="keywords" content="Kerbal Space Program, Save Game, Science Experiment, Generator, Career, Tool, Utility" />
+
     <title>KSP - Career Science Checklist Generator by bigorangemachine</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
