--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
   <body>
     <div class="wrapper">
       <header>
+		<img src="img/screen.jpg" class="hdn-tmb"/>
         <h1>Kerbal Space Program - Career Science Checklist Generator</h1>
         <p>A KSP checklist</p>
 
