--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<meta property="og:image" content="http://bigorangemachine.github.io/ksp_js_career_sci_list/img/screen.jpg" />
 	<meta property="og:description" content="Kerbal Space Program - Career Save Game tool.  Reads save file to generate a Kerbal Science Experiments table.  Upload a your file to this utility and get a report of your progress." />
 	<meta name="description" content="Kerbal Space Program - Career Save Game tool.  Reads save file to generate a Kerbal Science Experiments table.  Upload a your file to this utility and get a report of your progress."/>
-	<meta name="keywords" content="Kerbal Space Program, Save Game, Science Experiment, Generator, Career, Tool, Utility" />
+	<meta name="keywords" content="Kerbal Space Program, Save Game, Science Experiment, Progress, Generator, Career, Tool, Utility" />
 
     <title>KSP - Career Science Checklist Generator by bigorangemachine</title>
 
